--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -4,6 +4,17 @@
 
 /////////////////////////////////////////////////////////////////////////////////////
 
+.context {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 30% 0 30%;
+    @media (max-width: $medium) {
+        padding: 0;
+    }
+}
+
 .canvas {
     width: 100vw;
     min-height: 710px;
