--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2,6 +2,17 @@
 @import "dimensions";
 
 
+.context {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 30% 0 30%;
+    @media (max-width: $medium) {
+        padding: 0;
+    }
+}
+
 .canvas {
     width: 100vw;
     height: 600px;
